mule-user-guide/v/3.2/servlet-transport-reference.adoc
=  Servlet传输参考

Servlet传输提供了与servlet实现的集成。实现Servlet负责接收请求，然后Servlet传输将请求转交给任何注册的接收方。这个连接器没有调度器的概念，因为它是由请求触发的，可能会或可能不会返回响应。您将servlet URL指定为连接器配置的一部分，然后像任何其他 link:/mule-user-guide/v/3.2/http-transport-reference[HTTP端点]一样指定端点。

可以找到此传输的Javadoc http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/servlet/ServletConnector.html[这里]。有关在servlet容器中使用Mule的更多信息，请参阅 link:/mule-user-guide/v/3.2/embedding-mule-in-a-java-application-or-webapp[将Mule嵌入到Java应用程序或Web应用程序中]。

== 连接器

Servlet连接器是Mule和servlet引擎之间的通道适配器。它允许MuleReceiverServlet查找对通过servlet容器接收到的请求感兴趣的组件。

<connector...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| servletUrl  |   |否 |   |绑定servlet容器的真实URL。如果没有设置，当使用绑定到servlet端点的CXF时，可能无法正确生成WSDL。
| useCachedHttpServletRequest  |布尔值 |否 | false  |是否使用缓存的http servlet请求
|===

无<connector...>的子元素


例如：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:servlet="http://www.mulesoft.org/schema/mule/servlet"
    xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.0.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd
       http://www.mulesoft.org/schema/mule/servlet
       http://www.mulesoft.org/schema/mule/servlet/3.2/mule-servlet.xsd">

    <servlet:connector name="servletConnector" servletUrl="http://localhost:8888" />
...
----

您还可以将servlet URL指定为端点的一部分：

[source, xml, linenums]
----
<servlet:inbound-endpoint path="http://localhost:8888" />
----

== 端点

Servlet端点接受与HTTP端点相同的属性和子元素。有关更多信息，请参阅 link:/mule-user-guide/v/3.2/http-transport-reference[HTTP传输参考]。

== 对参数映射的Http请求

<http-request-to-parameter-map>转换器返回一个使用HTTP请求发送的参数的简单地图。如果多次给定相同的参数，则只有第一个值会在Map中。

无<http-request-to-parameter-map...>的子元素



== 输入流的Http请求

<http-request-to-input-stream>转换器将HttpServletRequest转换为InputStream。

无<http-request-to-input-stream...>的子元素



== 对字节数组的Http请求

通过提取请求的有效载荷，<http-request-to-byte-array>转换器将HttpServletRequest转换为一个字节数组。

无<http-request-to-byte-array...>的子元素


== 架构

*  http://www.mulesoft.org/schema/mule/servlet/3.2/mule-servlet.xsd[Servlet模式]
*  http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-servlet_xsd/schema-overview.html[模式概述]
